[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pty-wrap"
version = "0.1.0"
description = "PTY wrapper enabling interaction with interactive terminal programs via files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = ["pty", "terminal", "interactive", "automation", "wrapper"]

[project.scripts]
pty-wrap = "pty_wrap:main"

[project.urls]
Repository = "https://github.com/ahoydave/pty-wrap"

[tool.setuptools]
py-modules = ["pty_wrap"]
